--- a/package.json
+++ b/package.json
@@ -15,5 +15,5 @@
   "bugs": {
     "url": "https://github.com/GaboDevelop/trabajemos-con-sockets-geortega.17/issues"
   },
-  "homepage": "https://github.com/GaboDevelop/trabajemos-con-sockets-geortega.17#readme"
+  "homepage": "https://github.com/GaboDevelop/trabajemos-con-sockets-geortega.17#readme",
 }
